--- a/cart.html
+++ b/cart.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
   <link rel="stylesheet" href="css/main.css">
+  <script src="https://kit.fontawesome.com/1946a965ff.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -31,7 +32,9 @@
               </li>
               <li id="text" class="nav-item mx-3"><a class="nav-link" href="#" data-toggle="modal" data-target="#cartModal">Cart</a>
               </li>
-              <img id="cartPic" class="img-fluid" src="images/cart-icon-white-png-4.png" style="width: 20px; height: 20px;" alt="">
+              <div class="mainCart">
+              <img id="cartPic" class="img-fluid" src="images/cart-icon-white-png-4.png" style="width: 20px; height: 20px;" alt=""><span class="text-light">0</span>
+              </div>
             </ul>
           </div>
     </nav>
@@ -54,15 +57,7 @@
           <th id="text" style="width: 150px; font-size: 12px">Total</th>
         </tr>
       </thead>
-      <tbody>
-        <tr>
-          <td id="product"></td>
-          <td id="price"></td>
-          <td id="quantity"></td>
-          <td id="total"></td>
-        </tr>
-      </tbody>
-      <tbody>
+      <tbody class="cart-container">
         <tr>
           <td id="product2"><div class="d-none float-left mx-3">
             <button id="escapeBtn" class="close m-3">&times;</button>
@@ -72,51 +67,7 @@
           <td id="total2"></td>
         </tr>
       </tbody>
-      <tbody>
-        <tr>
-          <td id="product3"><div class="d-none float-left mx-3">
-            <button id="escapeBtn" class="close m-3">&times;</button>
-          </div></td>
-          <td id="price3"></td>
-          <td id="quantity3"></td>
-          <td id="total3"></td>
-        </tr>
-      </tbody>
     </table>
-    <div class="float-right mr-5">
-    <div class="row">
-      <div class="col-sm">
-          <h3 id="text">Cart Totals</h3>
-      </div>   
-      </div> 
-        <div class="row">
-          <div class="col-sm small">
-            Subtitle
-          </div>
-          <span id="subtitle" class="mr-3"></span>
-        </div>
-          <hr>
-          <div class="row">
-            <div class="col-sm small">
-              Vat(15%)
-            </div>
-            <p id="vat"></p>
-          </div>
-          <hr>
-          <div class="row">
-            <div class="col-sm small">
-              Total
-            </div>
-            <p id="total"></p>
-          </div>
-          <br>
-            <div class="row">
-              <button class="btn btn-outline-primary text-center" id="enquire4">
-              <span id="text">Enquire</span> 
-              </button>
-            </div>
-          </div>
-        <div class="clearfix mb-5"></div>    
 </section>
 
 <!-- Bottom Contact Section -->
@@ -211,6 +162,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <script src="js/app.js"> 
   </script>
-  <script src="js/new.js"></script>
+  <script src="js/jquery.js"></script>
 </body>
 </html>
