--- a/courses.html
+++ b/courses.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
+  <script src="https://kit.fontawesome.com/1946a965ff.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -10,12 +11,12 @@
   <title>Courses</title>
 </head>
 <body>
-
+  
 <!-- Nav Section -->
 
   <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <div class="container">
+      <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img class="maven_pic" src="images/maven_academy.svg" alt=""></a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" >
           <span class="navbar-toggler-icon"></span>
@@ -30,7 +31,9 @@
             </li>
             <li id="text" class="nav-item mx-3"><a class="nav-link" href="cart.html">Cart</a>
             </li> 
-            <img id="cartPic" class="img-fluid" src="images/cart-icon-white-png-4.png" style="width: 20px; height: 20px;" alt=""> 
+            <div class="mainCart">
+            <img id="cartPic" class="img-fluid" src="images/cart-icon-white-png-4.png" style="width: 20px; height: 20px;" alt=""><span class="text-light">0</span>
+            </div>
         </ul>
         </div>
       </div>  
@@ -269,7 +272,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script src="js/app.js">
-
 </script>
+<script src="js/jquery.js"></script>
 </body>
 </html>
