--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
+  <script src="https://kit.fontawesome.com/1946a965ff.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <title>Maven Academy</title>
+  <link rel="stylesheet" href="owl.carousel.min.css">
+  <link rel="stylesheet" href="owl.theme.default.min.css">
 </head>
 <body>
 
@@ -30,7 +33,9 @@
                 </li>
                 <li id="text" class="nav-item mx-3"><a class="nav-link" href="cart.html">Cart</a>
                 </li>
-                <img id="cartPic" class="img-fluid" src="images/cart-icon-white-png-4.png" style="width: 20px; height: 20px;" alt="">
+                <div class="mainCart">
+                <img id="cartPic" class="img-fluid" src="images/cart-icon-white-png-4.png" style="width: 20px; height: 20px;" alt=""><span class="text-light">0</span>
+                </div>
             </ul>
           </div>
       </div>   
@@ -47,7 +52,7 @@
           <img class="img-fluid" src="images/tech-mavens.png" alt="" width="430px" height="350px">
         </div>
       <div id="text" class="text-center mb-3">
-              Take your tech career to the next level with our immersive software development programmes 
+        Take your tech career to the next level with our immersive software development programmes 
       </div>
     <div class="d-flex justify-content-center">
       <button id="text" class="btn btn-primary" style="border-radius: 22.5px; width: 250px; height: 40px;">
@@ -132,7 +137,7 @@
                 <p id="text" class="text-center">View course detail</p>
               <div class="d-flex justify-content-center">
                 <button id="enquire1" class="btn btn-outline-primary border border-primary text-center pt-2" style="height: 40px;">
-                  <span id="text">Add to enquiry</span>
+                  <span class="cartEle" id="text">Add to enquiry</span>
                 </button>
               </div>
           </div>
@@ -148,7 +153,7 @@
                   <p id="text" class="text-center">View course detail</p>
                 <div class="d-flex justify-content-center">
                   <button id="enquire2" class="btn btn-outline-primary border border-primary text-center pt-2" style="height: 40px;">
-                    <span id="text">Add to enquiry</span>
+                    <span class="cartEle" id="text">Add to enquiry</span>
                   </button>
                 </div>      
             </div>
@@ -164,7 +169,7 @@
                 <p id="text" class="text-center">View course detail</p>
               <div class="d-flex justify-content-center">
                 <button id="enquire3" class="btn btn-outline-primary border border-primary text-center pt-2" style=" height: 40px;">
-                  <span id="text">Add to enquiry</span>
+                  <span class="cartEle" id="text">Add to enquiry</span>
                 </button>
               </div>
           </div>  
@@ -182,20 +187,14 @@
       <h3 id="text" class="text-center">Career Services</h3>
         <p id="text" class="small text-center">The Maven Academy is committed to helping you secure a new job after finishing your   bootcamp. With your hard-work and our help, we’re confident that you can get hired by a fantastic company.
         </p>
-      <div class="row d-flex justify-content-between">
-        <div>
-          <img src="images/logo-zando.png" alt="" width="220px" height="120px">
+        <div class="wrapper">
+          <div class="owl-carousel owl-theme">
+            <div class="item"><img src="images/logo-zando.png" alt="" width="220px" height="120px"></div>
+            <div class="item"><img id="img1" src="images/logo-nedbank.png" alt="" width="220px" height="120px"></div>
+            <div class="item"><img id="img2" src="images/logo-vuma.png" alt="" width="220px" height="120px"></div>
+            <div class="item"><img id="img3" src="images/logo-flash.png" alt="" width="220px" height="120px"></div>
+          </div>
         </div>
-        <div>
-          <img id="img1" src="images/logo-nedbank.png" alt="" width="220px" height="120px">
-        </div> 
-        <div>
-          <img id="img2" src="images/logo-vuma.png" alt="" width="220px" height="120px">
-        </div>
-        <div>
-          <img id="img3" src="images/logo-flash.png" alt="" width="220px" height="120px">
-        </div>
-      </div>
           <img src="images/arrow-right.svg" alt="">
         <div class="d-flex">
           <button id="enquire" class="btn btn-outline-primary mt-4 border border-primary text-center" style="width: 140px;">
@@ -343,7 +342,7 @@
             </div>
           </div>
         </div>
-      </footer> 
+      </footer> `
     </div>
   </section>
 
@@ -364,8 +363,10 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="js/app.js">
-
+<script src="js/jquery.js"></script>
+<script src="owl.carousel.min.js   "></script>
+<script src="js/recent.js">
 </script>
+<script src="js/app.js"></script>
 </body>
 </html>
