--- a/cart.html
+++ b/cart.html
@@ -15,124 +15,126 @@
 <!-- Nav Section -->
 
   <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top ">
-      <a class="navbar-brand" href="index.html">
-        <img class="maven_pic" src="images/maven_academy.svg" alt="">
-      </a>
+    <nav class="navbar navbar-expand-md navbar-color navbar-dark fixed-top ">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/maven_academy.svg" alt="maven_academy-icon">
+        </a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" >
           <span class="navbar-toggler-icon"></span>
         </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-              <li id="text" class="nav-item mx-3"><a class="nav-link" href="index.html">Home</a>
+              <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="index.html">Home</a>
               </li>
-              <li id="text" class="nav-item mx-3"><a class="nav-link" href="courses.html">Courses</a>
+              <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="courses.html">Courses</a>
               </li>
-              <li id="text" class="nav-item mx-3"><a class="nav-link" href="#">Contact Us</a>
+              <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="#">Contact Us</a>
               </li>
-              <li id="text" class="nav-item mx-3"><a class="nav-link" href="#" data-toggle="modal" data-target="#cartModal">Cart</a>
+              <li class="nav-item mx-3 all-maven-text"><a class="nav-link" href="#" data-toggle="modal" data-target="#cartModal">Cart</a>
               </li>
               <div class="mainCart">
-              <img id="cartPic" class="img-fluid" src="images/cart-icon-white-png-4.png" style="width: 20px; height: 20px;" alt=""><span class="text-light">0</span>
+              <img id="main-cart-icon" class="img-fluid" src="images/cart-icon-white-png-4.png" style="width: 20px; height: 20px;" alt=""><span class="text-light">0</span>
               </div>
             </ul>
           </div>
+      </div>
     </nav>
   </header>
 
 <!-- Main Section -->
 
 <section>
-  <br>
   <div class="container-fluid mt-5 pt-5 pb-1" style="height: auto;">
     <div class="main-title mt-3 mb-5">
-      <h1 id="cartHead">Cart</h1>
+      <h1 id="cart-heading">Cart</h1>
     </div>
-    <table id="table" class="table table-borderless">
-      <thead id="tableHead">
-        <tr>
-          <th id="text" style="width: 400px; font-size: 12px;">Product</th>
-          <th id="text" style="width: 150px; font-size: 12px">Price</th>
-          <th id="text" style="width: 150px; font-size: 12px">Quantity</th>
-          <th id="text" style="width: 150px; font-size: 12px">Total</th>
+    <table id="cart-table-amounts" class="table table-borderless">
+      <thead id="cart-table">
+        <tr class="all-maven-text">
+          <th style="width: 400px; font-size: 12px;">Product</th>
+          <th style="width: 150px; font-size: 12px">Price</th>
+          <th style="width: 150px; font-size: 12px">Quantity</th>
+          <th style="width: 150px; font-size: 12px">Total</th>
         </tr>
       </thead>
       <tbody class="cart-container">
         <tr>
-          <td id="product2"><div class="d-none float-left mx-3">
-            <button id="escapeBtn" class="close m-3">&times;</button>
+          <td><div class="d-none float-left mx-3">
+          <button id="close-button" class="close m-3">&times;</button>
           </div></td>
-          <td id="price2"></td>
-          <td id="quantity2"></td>
-          <td id="total2"></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
       </tbody>
     </table>
+  </div>
 </section>
 
 <!-- Bottom Contact Section -->
 
-<section>
-  <div class="container-fluid" style="height: auto; background-color: #343a40">
+<section class="bottom-section">
+  <div class="container-fluid">
     <footer class="page-footer font-small indigo">
       <div class="container text-center text-md-left">
         <div class="row p-5">
           <div class="col-sm mx-auto ">
-            <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">GENERAL</h5>
+            <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small all-maven-text">GENERAL</h5>
             <br>
             <ul class="list-unstyled">
               <li>
-                <a id="text" class="text-light" href="#!">Home</a>
+                <a class="text-light all-maven-text" href="#!">Home</a>
               </li>
               <br>
               <li>
-                <a id="text" class="text-light" href="#!">Faq</a>
+                <a class="text-light all-maven-text" href="#!">Faq</a>
               </li>
             </ul>
           </div>
           <hr class="clearfix w-100 d-md-none">
           <div class="col-sm mx-auto">
-            <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">WHY US</h5>
+            <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small all-maven-text">WHY US</h5>
             <br>
             <ul class="list-unstyled">
               <li>
-                <a id="text" class="text-light" href="#!">Why Study with us?</a>
+                <a class="text-light all-maven-text" href="#!">Why Study with us?</a>
               </li>
               <br>
               <li>
-                <a id="text" class="text-light" href="#!">Financial Aid - Study for Just R1</a>
+                <a class="text-light all-maven-text" href="#!">Financial Aid - Study for Just R1</a>
               </li>
               <br>
               <li>
-                <a id="text" class="text-light" href="#!">Internship - Work, Learn & Earn</a>
+                <a class="text-light all-maven-text" href="#!">Internship - Work, Learn & Earn</a>
               </li>
             </ul>
           </div>
           <hr class="clearfix w-100 d-md-none">
           <div class="col-md-3 mx-auto align-iet">
-            <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">DEVELOPER COURSES</h5>
+            <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small all-maven-text">DEVELOPER COURSES</h5>
             <br>
             <ul class="list-unstyled">
               <li>
-                <a id="text" class="text-light" href="#!">Full Stack Web Developer</a>
+                <a class="text-light all-maven-text" href="#!">Full Stack Web Developer</a>
               </li>
             </ul>
           </div>
           <hr class="clearfix w-100 d-md-none">
           <div class="col-md-4 mx-auto">
-            <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">CONTACT US</h5>
+            <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small all-maven-text">CONTACT US</h5>
             <br>
             <ul class="list-unstyled">
               <li>
-                <img class="img-fluid mr-2" src="images/phone-icon.svg" alt=""><a class="text-light font-weight-bold" href="+27 21 461 68 17" id="text">+27 21 461 68 17</a>
+                <img class="img-fluid mr-2" src="images/phone-icon.svg" alt="phone-icon"><a class="text-light font-weight-bold all-maven-text" href="+27 21 461 68 17">+27 21 461 68 17</a>
               </li>
               <br>
               <li>
-                <img class="img-fluid mr-2" src="images/email-icon.svg" alt=""><a class="text-light small" href="#!" id="text">hello@themavenacademy.one</a>
+                <img class="img-fluid mr-2" src="images/email-icon.svg" alt="email-icon"><a class="text-light small all-maven-text" href="#!">hello@themavenacademy.one</a>
               </li>
               <br>
               <li>
-                <img class="img-fluid mr-2" src="images/location-icon.svg" alt=""><a class="text-light small p-0" href="#!" id="text">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
+                <img class="img-fluid mr-2" src="images/location-icon.svg" alt="location-icon"><a class="text-light small p-0 all-maven-text" href="#!">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
               </li>
             </ul>
           </div>
@@ -144,17 +146,20 @@
 
 <!-- Footer Section -->
 
-<footer>
-  <nav class="navbar navbar-expand-sm" style="height: 100px; background-color: #0E1011;">
-    <ul class="navbar-nav">
-      <li class="nav-items text-light mr-auto ml-5" id="text">All Rights Reserved, Maven Academy Ptd()Ltd.</li>
-    </ul>
+<footer class="footer-section">
+  <nav class="navbar navbar-expand-md navbar-color navbar-dark p-3">
+    <div class="col-sm-12 col-md-6 col-lg-6">
+      <ul class="navbar-nav">
+        <li class="nav-items text-light mr-auto ml-5 mt-4 small all-maven-text">All Rights Reserved, Maven Academy Ptd()Ltd.</li>
+      </ul>
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-6">
+      <div class="social-media-icons pr-4">
+        <a href="#"><img class="border rounded bg-primary mx-1 social-media-platforms" src="images/facebook.svg" alt="facebook-icon"></a>
+        <a href="#"><img class="border rounded bg-primary mx-1 social-media-platforms" src="images/twitter.svg" alt="twitter-icon"></a>
+        <a href="#"><img class="border rounded bg-primary mx-1 social-media-platforms" src="images/instagram.svg" alt="instagram-icon"></a>
       </div>
-          <div class="ml-auto pr-5">
-          <a href="#"><img class="border rounded bg-primary mx-1" src="images/facebook.svg" alt=""></a>
-            <a href="#"><img class="border rounded bg-primary mx-1" src="images/twitter.svg" alt=""></a>
-            <a href="#"><img class="border rounded bg-primary mx-1" src="images/instagram.svg" alt=""></a>
-        </div> 
+    </div>     
   </nav>
 </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
